# pylooke

./: .gitignore  README.md  pyproject.toml
pylooke/: __init__.py  cli.py
pylooke/encripta/: encripta_crypto.py  looke.py
pylooke/utils/: body.py  device.py  subtitle.py
